# ezrunner

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.local.json
docs/: ARCHITECTURE.md  CODE_STYLE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  TESTING.md
src/ezrunner/: __init__.py  cli.py  exceptions.py
src/ezrunner/api/: huggingface.py  modelscope.py
src/ezrunner/core/: builder.py  discovery.py  dockerfile.py  engine.py  exporter.py  hardware.py
src/ezrunner/models/: __init__.py  engine.py  hardware.py  model_info.py
src/ezrunner/templates/: transformers.dockerfile  vllm.dockerfile
src/ezrunner/utils/: __init__.py  logger.py
tests/: conftest.py
tests/integration/: test_dockerfile_pipeline.py
tests/unit/: test_builder.py  test_cli.py  test_discovery.py  test_dockerfile_generator.py  test_engine_selector.py  test_exporter.py  test_hardware_analyzer.py  test_models.py
